Fix Swiper navigation button layout issue

--- a/src/assets/styles/components/common/carousels/genericSwiperCarousel.scss
+++ b/src/assets/styles/components/common/carousels/genericSwiperCarousel.scss
@@ -24,7 +24,7 @@
   .swiper-navigation {
     position: absolute;
     top: -3.25rem;
-    right: 0.5rem;
+    right: 0rem;
     display: flex;
     gap: 10px;
     z-index: 10;
